arrowchat/public/mobile/includes/css/style.css
/* Modifications by Nicolas Ward
* Line 521
* Added classes for cancel session request, start session, and end session
*/

.arrowchat_message_wrapper {
	display: block;
	clear: both;
}
#textinput1,#textinput2{
	padding-right: 55px;
}
.arrowchat_giphy_box,.arrowchat_giphy_box2 {
	position: relative;
}
.giphy_cancel,.giphy_cancel2{
	position: absolute;
	right: 10px;
	bottom: 7px;
	color: #0084ff;
	cursor: pointer;
}
.arrowchat_emoji {
    padding: 5px;
    width: 28px;
    height: 28px;
}
input.mobile_search {
    -webkit-border-radius: 10px;
    -moz-border-radius: 10px;
    border-radius: 10px;
	min-height: 2.3em;
	padding: .4em .8em .4em 2.3em;
	background: #ececed url(images/icons-search.png) 10px 9px no-repeat;
	background-size: 1.1em;
}
.ui-title .ui-input-text{
	margin: 0;
}
#page1 .ui-header .ui-title{
	margin: .1em 10% .4em;
}
.arrowchat_at_user{font-weight:bold;background-color:#333;color:#fff;padding:1px;-webkit-border-radius:4px;-moz-border-radius:4px;border-radius:4px}
.arrowchat_giphy_search_wrapper .ui-input-text,.arrowchat_giphy_search_wrapper2 .ui-input-text{
	background-color: #eaebec;
    -webkit-border-radius: 5px;
    -moz-border-radius: 5px;
    border-radius: 5px;
	margin-left:9px !important;
	margin-bottom:5px !important;
	width: 70% !important;
}
.arrowchat_giphy_search_wrapper .ui-input-text input,.arrowchat_giphy_search_wrapper2 .ui-input-text input{
	padding-top: 4px;
}
.arrowchat_emoji img {
    width: 28px;
    height: 28px;
}
.emoji_clicked{
	background-position:-141px -169px !important;
}
.smiley_box_wrapper {
	display: none;
	background-color: #f8f8f8;
    height: 220px;
	padding-left: 10px;
	padding-top: 10px;
    overflow-y: auto;
	-webkit-column-count: 19;
    -moz-column-count: 19;
    column-count: 19;
    -webkit-column-gap: 0px;
    -moz-column-gap: 0px;
    column-gap: 0px;
}
@media(max-width: 900px){
	.smiley_box_wrapper {
		-webkit-column-count: 9;
		-moz-column-count: 9;
		column-count: 9;
	}
}
.arrowchat_self a {
    color: #fff !important;
    text-decoration: underline;
}
.arrowchat_message_wrapper a {
    color: #365899;
}
.arrowchat_giphy_message:after {
    background: url(images/img-giphy.png) 7px 0 no-repeat;
    display: block;
    width: 179px;
    height: 26px;
    display: block;
    content: ' ';
}
.arrowchat_giphy_image_wrapper,.arrowchat_giphy_image_wrapper2 {
	display: none;
	height: 118px;
	margin-left: 6px;
	margin-right: 6px;
	white-space: nowrap;
	overflow-x: auto;
	-webkit-overflow-scrolling: touch;
	-ms-overflow-style: -ms-autohiding-scrollbar;
}
.arrowchat_giphy_search_wrapper,.arrowchat_giphy_search_wrapper2{
	display: none;
}
.arrowchat_giphy_image_wrapper img,.arrowchat_giphy_image_wrapper2 img{
	display: inline-block;
	margin-left: 2px;
}
.giphy_clicked{
	background-position: -294px 0px !important;
}
.arrowchat_loading_icon{
	text-align:center;
	margin:0 auto;
	display:block;
	padding:5px;
	height:16px;
	width:16px;
	content:" ";
	background:url(images/img-loading.gif) no-repeat center center;
}
.arrowchat_smiley_button,.arrowchat_smiley_button2 {
    cursor: pointer;
    background: url(images/bg-core.png) no-repeat -206px 0px;
    width: 22px;
    height: 22px;
	margin-left: 20px;
	margin-top: 6px;
	margin-bottom: 9px;
	z-index:2;
	display: inline-block;
}
.arrowchat_giphy_button,.arrowchat_giphy_button2 {
    cursor: pointer;
    background: url(images/bg-core.png) no-repeat -262px 0px;
    width: 27px;
    height: 23px;
	margin-left: 20px;
	margin-top: 6px;
	margin-bottom: 9px;
	z-index:2;
	display: inline-block;
}
.arrowchat_upload_user_button,.arrowchat_upload_user_button2 {
	cursor: pointer;
	background: url(images/bg-core.png) no-repeat -232px 0px;
    width: 24px;
    height: 25px;
	margin-left: 12px;
	margin-top: 8px;
	margin-bottom: 5px;
    z-index: 2;
	display: inline-block;
}
.arrowchat_users_upload_queue {
	position:fixed;
	top:0px;
	left:0px;
	z-index:1091;
	width: 100%;
	font-family: 'Open Sans',Helvetica,Arial,sans-serif;
	color: #333;
}
.arrowchat_users_upload_queue .uploadifive-queue-item{
    background-color: #fff;
	box-sizing: border-box;
    -webkit-border-radius: 5px;
    -moz-border-radius: 5px;
    border-radius: 5px;
    -webkit-box-shadow: 0 1px 5px rgba(0, 0, 0, 0.3);
    -moz-box-shadow: 0 1px 5px rgba(0, 0, 0, 0.3);
    box-shadow: 0 1px 5px rgba(0, 0, 0, 0.3);
    padding: 10px;
	margin: 3px;
}
.uploadifive-queue-item .close{
    background: url(images/cancel.png) no-repeat;
    display: block;
    float: right;
    height: 16px;
	margin-top:7px;
    text-indent: -9999px;
    width: 16px;
}
.arrowchat_users_upload_queue .filename,#arrowchat_chatroom_upload_queue .filename{word-wrap:break-word}
.arrowchat_chatboxmessage {
	position: relative;
	display: inline-block;
	background-color: #f1f0f0;
	color: #222222;
	padding: 10px 15px;
	margin-bottom: 10px;
	margin-left: 10px;
	min-height: 20px;
	max-width: 75%;
	text-align: left;
	-webkit-border-radius: 10px;
	-moz-border-radius: 10px;
	border-radius: 10px;
}
#uploadifive-arrowchat_upload_button .ui-input-text,#uploadifive-arrowchat_upload_button2 .ui-input-text{display:block}
.arrowchat_chatroom_box_message {
	position: relative;
	display: inline-block;
	color: #222222;
	background-color: #f1f0f0;
	padding: 10px 15px;
	margin-bottom: 10px;
	margin-left: 10px;
	min-height: 20px;
	max-width: 70%;
	text-align: left;
	-webkit-border-radius: 10px;
	-moz-border-radius: 10px;
	border-radius: 10px;
}
.arrowchat_self {
	background-color: #0084ff;
	padding: 10px 15px;
	color:#fff;
	font-weight:400;
	max-width: 70%;
	margin-right: 10px;
	text-align: left;
	float: right;
	-webkit-border-radius: 10px;
	-moz-border-radius: 10px;
	border-radius: 10px;
}
.arrowchat_chatroom_global {
	border-color: #b4d6c2;
	background-color: #d6f2e1;
	color: #000;
	max-width: none;
	margin-left: 0;
	margin-right: 0;
}
.arrowchat_is_typing{
	display:none;
	float:right;
	margin-top:-5px;
	margin-right:3px
}
.arrowchat_is_typing_chat{
	display:block;
	height:23px;
	margin:0
}
/* ... */

